@@ -2,7 +2,7 @@ name = Webspark MegaMenu
 description = The TB Mega Menu module and CSS for webspark.
 core = 7.x
 package = ASU Webspark
-version = 7.x-1.9
+version = 7.x-1.10
 project = webspark_megamenu
 dependencies[] = defaultcontent
 dependencies[] = features
