@@ -1,5 +1,8 @@
 # Webspark Mega Menu Changelog
 
+### Webspark Mega Menu 7.x-1.10, 2018-10-09
+- Accessibility fix - Updated <i> tags to <span> tags 
+
 ### Webspark Mega Menu 7.x-1.9, 2018-05-15
 - Fix tabbing/arrowing through non-accessible Mega Menu items
 - Reverted focus indicators from border to outline.
